@@ -4,6 +4,8 @@ examples/ex1.pl
 examples/ex2.pl
 examples/ex3.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -18,8 +20,8 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Error-Pure-Always/00-use.t
-t/Error-Pure-Always/01-version.t
-t/Error-Pure-Always/02-pod_coverage.t
-t/Error-Pure-Always/03-pod.t
-t/Error-Pure-Always/04-err.t
+t/Error-Pure-Always/01-use.t
+t/Error-Pure-Always/02-version.t
+t/Error-Pure-Always/03-err.t
+xt/Error-Pure-Always/01-pod_coverage.t
+xt/Error-Pure-Always/02-pod.t
