@@ -6,10 +6,8 @@ build_requires:
   English: 0
   Error::Pure::Utils: 0.22
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.03
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -25,6 +23,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Error::Pure: 0.22
   perl: 5.6.0
