@@ -8,9 +8,14 @@ use inc::Module::Install;
 # Definition.
 abstract 'Perl module for rewrite die by err from Error::Pure module.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.03;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Error-Pure-Always';
 readme_from 'Always.pm';
+recursive_author_tests('xt');
 requires 'Error::Pure' => 0.22;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
@@ -19,10 +24,8 @@ resources 'homepage' => 'https://github.com/tupinek/Error-Pure-Always';
 resources 'repository' => 'git://github.com/tupinek/Error-Pure-Always';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.22;
-test_requires 'File::Object' => 0.03;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.06';
 
