@@ -1,5 +1,6 @@
 0.06
  - Improve SEE ALSO section in doc.
+ - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
 
 0.05 2015-01-08T19:56:30+01:00
